Separated the permission nodes for /team unban, /team sethome and /team demote from other commands. 
Added an option to disable toggeling team chat, this should be used if your chat manager is not detecting messages to team chats are cancelled from the main chat

Bug Fixes: 
Fixed a bug where if HolographicDisplays is present but not enabled on the server, errors appear in the console. 
Fixed a bug where tridents could still be used to damage team members. 


3.0.10
Bug Fixes:
Fixed a problem where errors are logged to console when holographic displays is not on the server
Fixed /team color permission problem 
Fixed a problem with the placeholder %betterteams_rank%


3.1.0
Features: 
Added the option for allies, this comes with the commands (/team ally, /team neutral and /team allychat) 
Added admin commands: /teama name <team> <name>, /teama description <team> <description>, /teama open <team>, /teama invite <team> <player>
/team color is used whenever the players team name is displayed, this can be changed in the config under the option colorTeamName'
Added a second hologram option to display a balance leaderboard

Improvements:
Commands and cooldowns only activate if the command is successful
Added placeholder %betterteams_color% to use the team color
Improved help message if a command is invalid

Bug Fixes: 
Fixed a problem when placeholder API is not present on the server.
Fixed a problem where a players team name was not removed when they left the team

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
Add command cost and cooldown to documentation 
add /team color to documentation
commands to add to documentation, plugin.yml and plugin page: /teama name, /teama description, /teama open, /teama invite, /team ally, /team neutral, /team allychat 
Add help messages to messages.yml
update messages.yml and config.yml version 



Headings: 
Features: 


Improvements:


Bug Fixes: 
